# MeshDenoiser

./: .gitignore  CMakeLists.txt  DenoisingOptions.txt  MIGRATION_GUIDE.md  MeshDenoiser.cpp  MeshIO.cpp  MeshIO.h  MeshTypes.h  OPTIMIZATION_ROADMAP.md  README  README.md  TUNING_GUIDE.md  build_release.ps1  package_release.ps1
.github/workflows/: perf-smoke.yml
TestData/: DenoisingOptions_M3_CG.txt  Denoising_AliceVision.txt
benchmarks/: README.md  benchmark_manifest.json
tools/: benchmark_runner.py  perf_smoke.py  test_determinism.py
